[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=5]
[ext_resource path="res://assets/art/coin/coin.png" type="Texture" id=6]
[ext_resource path="res://assets/art/coin/heart.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "coin_spinning",
"speed": 6.5
} ]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.533333 )

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]
visible = false

[node name="InterfaceLayerInGame" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="InterfaceLayerInGame"]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceLayerInGame/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="CoinsCounter" type="Panel" parent="InterfaceLayerInGame/Control/VBoxContainer"]
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 45 )
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="InterfaceLayerInGame/Control/VBoxContainer/CoinsCounter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
text = "0"
align = 2
valign = 1
autowrap = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="InterfaceLayerInGame/Control/VBoxContainer/CoinsCounter"]
position = Vector2( 21.5, 22.5 )
scale = Vector2( 4.375, 4.375 )
frames = SubResource( 8 )
animation = "coin_spinning"
playing = true

[node name="HeartsCounter" type="Panel" parent="InterfaceLayerInGame/Control/VBoxContainer"]
margin_top = 49.0
margin_right = 100.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 45 )
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="InterfaceLayerInGame/Control/VBoxContainer/HeartsCounter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
text = "3"
align = 2
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="InterfaceLayerInGame/Control/VBoxContainer/HeartsCounter"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
expand = true

[connection signal="collect_coin" from="Level/Player" to="." method="_on_Player_collect_coin"]
[connection signal="collect_hp" from="Level/Player" to="." method="_on_Player_collect_hp"]
